[what]丹麦语、瑞典语、挪威语语言包更新

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -2,8 +2,8 @@
 <resources>
    <string name="app_name">Housegard</string>
    <string name="btnConfirmTitle">TILSLUT</string>
-   <string name="config_instruction">Når hub’en har været tændt i fem sekunder, tryk på hub-knappen og hold den inde i mere end tre sekunder</string>
-   <string name="how_to_config">Bekræft, at det blå lys blinker og klik derefter på Næste.</string>
+   <string name="config_instruction">Tilslut din mobil til din 2,4 GHz Wifi. Tilslut hub, vent mindst 5 sekunder. Tryk på hub-knappen, og hold den nede i 3 sekunder.</string>
+   <string name="how_to_config">Bekræft, at hubben blinker blåt (hvert sekund), og klik derefter på Næste.</string>
    <string name="next">NÆSTE</string>
    <string name="retry">PRØV IGEN</string>
    <string name="sure_to_logout">Er du sikker på, at du vil logge af?</string>
@@ -21,14 +21,14 @@
    <string name="new_version">Ny</string>
    <string name="app_version_hint">App-version</string>
    <string name="gateway_version_hint">Firmwareversion</string>
-   <string name="connect_alert">Nuværende hub:</string>
+   <string name="connect_alert">Valgt hub:</string>
    <string name="connect_equipment_alert">Vælg en hub</string>
    <string name="please_input_complete">Udfyld det hele!</string>
    <string name="password_length">Adgangskoden skal indeholde mindst 6 tegn</string>
    <string name="password_two_different">Forkert adgangskode</string>
    <string name="name_hint">Mail</string>
    <string name="password_hint">Indtast adgangskode</string>
-   <string name="wifi_password_hint">Indtast wifi-adgangskode</string>
+   <string name="wifi_password_hint">Indtast WiFi-adgangskode</string>
    <string name="auto_login">Husk adgangskoden</string>
    <string name="login">Log på</string>
    <string name="reset_code">Nulstil adgangskode</string>
@@ -70,12 +70,12 @@
    <string name="update_alert">Aktuel version:% 1$s, versionskode:%2$d, find ny version:%3$s, ny versionskode:%4$d, Vil du opdatere?</string>
    <string name="exit_hint">Tryk igen for at afslutte %1$s</string>
    <string name="my_home">Mit hjem</string>
-   <string name="system_scene">Scenarie-tilstand</string>
-   <string name="scene_list">Automatisering</string>
-   <string name="choose_color">Hub farve</string>
+   <string name="system_scene">Scenarie</string>
+   <string name="scene_list">Scenarie</string>
+   <string name="choose_color">Farven på bub til tilstanden</string>
    <string name="edit">Skift</string>
    <string name="get_max_scene_group">Du kan ikke tilføje flere enheder</string>
-   <string name="equipment_list">Enhedsliste</string>
+   <string name="equipment_list">Enheder</string>
    <string name="add_equipment">Tilføj enhed</string>
    <string name="replace_equipment">Erstat enheden</string>
    <string name="delete_equipment">Fjern enheden</string>
@@ -93,7 +93,7 @@
    <string name="all_condition_hint_one">Hvis du tilføjer flere betingelser, skal alle betingelser være opfyldt, inden opgaven udføres</string>
    <string name="all_condition_hint_two">Hvis du kun tilføjer en betingelse, udføres opgaven, når denne er opfyldt</string>
    <string name="all_condition_hint_three">Hvis du stadig ikke forstår funktionerne i denne indstilling, kan du vælge standardindstillingen eller spørge os.</string>
-   <string name="my_scene">Mit scenarie</string>
+   <string name="my_scene">Scenarie</string>
    <string name="name_is_null">Navnet er tomt</string>
    <string name="name_is_repeat">Navnet bruges allerede</string>
    <string name="name_is_too_long">Navnet er for langt</string>
@@ -133,11 +133,11 @@
    <string name="has_been_moved">Fjernet</string>
    <string name="has_people">Udløser</string>
    <string name="recent_device">Nuværende hub:</string>
-   <string name="net_configuration">Hub konfiguration</string>
+   <string name="net_configuration">Installer hub</string>
    <string name="logout">Log af</string>
    <string name="setting">Indstillinger</string>
    <string name="remember_password">Husk adgangskoden</string>
-   <string name="is_connected_to_wifi">%1$s er tilsluttet til wifi</string>
+   <string name="is_connected_to_wifi">%1$s er tilsluttet til WiFi</string>
    <string name="esptouch_is_configuring">Hub’en konfigureres, vent…</string>
    <string name="failed">Fejl</string>
    <string name="failed_Esptouch_check_eq">Konfigurationsfejl. Kontrollér wifi-signalet, hub er i konfigurationstilstand eller har et problem.</string>
@@ -155,7 +155,7 @@
    <string name="dialog_empetycode">Indtast valideringskoden</string>
    <string name="dialog_errorcode">Indtastningsfejl, indtast igen</string>
    <string name="success_send">Send udført</string>
-   <string name="input_graph">Indtast en grafisk valideringskode</string>
+   <string name="input_graph">Indtast den grafiske verifikationskode</string>
    <string name="check_email">Mailregistrering udført</string>
    <string name="update_name_success">Ændring af navn udført</string>
    <string name="serve_instruction">Registrering medfører, at du godkender brugerbetingelserne</string>
@@ -163,13 +163,13 @@
    <string name="click_to_call">Klik for at ringe til nødopkaldsnummeret</string>
    <string name="not_setting">Ikke indstillet</string>
    <string name="set_emergency_call">Indtast nødopkaldsnummer</string>
-   <string name="please_input_emergency_call">Indtast et nødopkaldsnummer</string>
+   <string name="please_input_emergency_call">Vil du indtaste et nødopkaldsnummer</string>
    <string name="emergency_desc_first">Det kan være dit eget eller en af dine pårørendes mobilnummer.</string>
    <string name="emergency_desc_second">Klik på knappen” Nødopkald” på siden for enkeltenhedsdetaljer.</string>
    <string name="set_username">Skift brugernavn</string>
    <string name="set_devname_success">Ændring af hub-navn udført</string>
-   <string name="add_device_hint">Tryk på knappen, så enheden kan tilføjes tre gange hurtigere.</string>
-   <string name="add_device_tip">NB! Hvis du trykker på hub-knappen i mere end 3 sekunder, når det grønne lys blinker, slettes alle enheder.</string>
+   <string name="add_device_hint">Tryk hurtigt på enhedsknappen tre gange for at tilføje.</string>
+   <string name="add_device_tip">Advarsel! Hvis du trykker på hub-knappen i mere end 3 sekunder, slettes alle enheder (gælder når hub’en blinker grønt)</string>
    <string name="done">Udført</string>
    <string name="now_gateway_scene_is_happen_has_scene">NB! Den aktuelle hub %1$s %2$s er tændt</string>
    <string name="other_gateway_scene_is_happen_has_scene">NB! En anden hub %1$s %2$s er tændt, \n skift visning til den</string>
@@ -291,7 +291,7 @@
    <string name="device_setup_record_length">Videolængde</string>
    <string name="device_setup_record_mode">Video</string>
    <string name="device_setup_exposure_time">Eksponeringstid</string>
-   <string name="device_setup_scene_mode">Scenarie-tilstand</string>
+   <string name="device_setup_scene_mode">Tilstand</string>
    <string name="device_setup_electronic_slow_shutter">Langsom elektronisk lukker</string>
    <string name="device_setup_electronic_slow_shutter_prompt">Forbedrer billedets lysstyrke ved svagt lys. Kan forårsage uskarphed.</string>
    <string name="device_setup_color_mode">Farvetilstand</string>
@@ -344,10 +344,10 @@
    <string name="no_monitor_hint">Ingen video, klik for at tilføje</string>
    <string name="monitor_manage">Kamerahåndtering</string>
    <string name="confirm_delete_monitor">Er du sikker på, at du vil fjerne kameraet?</string>
-   <string name="please_choose_mode">Væg en profil</string>
-   <string name="timer_list">Timer</string>
-   <string name="please_choose_switch_time">Vælg skift tid</string>
-   <string name="edit_timer">Skift tidspunkt</string>
+   <string name="please_choose_mode">Vælg tilstand</string>
+   <string name="timer_list">Skift tilstand</string>
+   <string name="please_choose_switch_time">Vælg tidspunkt for at skifte tilstand</string>
+   <string name="edit_timer">Skift tilstand</string>
    <string name="switch_to">Skift til</string>
    <string name="most_timer">Der kan ikke tilføjes flere tidsbestemte opgaver</string>
    <string name="wifi_config">Tilføj kamera</string>
@@ -383,8 +383,8 @@
    <string name="common_setting">Grundindstillinger</string>
    <string name="select_date">Vælg dato</string>
    <string name="gateway_empty">Hub-listen er tom</string>
-   <string name="equipment_list_empty">Enhedslisten er tom \n, tryk på knappen i øverste højre hjørne for at tilføje</string>
-   <string name="timer_list_empty">Timer-listen er tom \n, tryk på knappen i øverste højre hjørne for at tilføje</string>
+   <string name="equipment_list_empty">Enhedslisten er tom \n, klik på plustegnet for at tilføje.</string>
+   <string name="timer_list_empty">Timer-listen er tom \n, klik på plustegnet for at tilføje.</string>
    <string name="video_common">Normal</string>
    <string name="video_alarm">Alarm</string>
    <string name="video_time">Optagelsestid</string>
@@ -397,7 +397,7 @@
    <string name="temp_or_hum">Vælg udløser for temperatur eller luftfugtighed</string>
    <string name="trigger_style">Udløser-tilstand</string>
    <string name="server_intro">1. Bekræftelse og accept af brugerbetingelserne\n Indholdet og tjenesterne på denne webside og app ejes af Sunmatic The Safety Company AB. Du skal læse disse betingelser grundigt igennem, inden du accepterer denne tjeneste. Brugere af tjenesten, eller personer, der har færdiggjort registreringsprocessen, har accepteret alle brugerbetingelserne. \n \n2, Brugeren accepterer: \n(1) at opgive rettidige, detaljerede og korrekte personlige oplysninger. \n(2) løbende at opdatere registreringsoplysningerne og overholde kravene. \n Hvis de oplysninger, som brugeren har opgivet, ikke er korrekte, har dette websted ret til at opsige tjenesten. \n Dette websted og denne app videregiver ikke brugerens navn, adresse, mailadresse, kontonummer og telefonnummer og andre oplysninger (se vores politik om beskyttelse af privatlivets fred). \n Brugere skal følge alle nedenstående regler på dette websted og denne app: \n(1) Overførsel af data skal overholde EU’s regler på området. \n(2)Brugen af informationstjenester må ikke være ulovlig eller uetisk. \n(3) Må ikke påvirke netværkstjenesten. \n(4)Alle netværksprotokoller, regler, procedurer og praksis for brugen af tjenester skal overholdes. Brugerens adfærdskodeks er baseret på internetregler, retningslinjer og praksis. \n \n3, Ændring af brugerbetingelserne \n Dette websted og denne app har ret til at ændre betingelserne om nødvendigt, og sådanne ændringer offentliggøres her på siden. \n Hvis brugeren ikke accepterer ændringerne, kan brugeren frivilligt opsige medlemskabet. Hvis brugeren ikke opsiger sit medlemsskab, anses ændringen for at være accepteret. \n \n4, Brugerens kontonummer, adgangskode og sikkerhed \n Når du har registreret dig som medlem, får du en adgangskode og et brugernavn.</string>
-   <string name="about_app">Housegard Notes intelligente sikkerhedssystem består af en hub og forskellige enheder. Skyserver, mobilt internet og RF-kommunikationsteknologi ”bærer” datalinket, så du kan fjernovervåge og kontrollere den fjerntilsluttede intelligente terminal til hjemmemiljø. Systemet understøtter flere forskellige typer. Profiler og fleksibelt tilpassede regler for håndtering af scenarier, der automatiserer forskellige sikkerhedshændelser. Intelligente enheder omfatter på nuværende tidspunkt røgalarm, gasalarm, kuliltealarm, vandlækage-alarm, magnetiske sensorer til døre, bevægelsessensorer, nødopkaldsknapper, intelligente paneler og temperatur- og fugtighedssensorer Der kommer flere enheder som f.eks. netværkskameraer, intelligente dørlåse, paneler, intelligent luftrensning og elektromagnetiske vandventiler.</string>
+   <string name="about_app">Beskyt dit hjem på afstand med smarte produkter fra Housegard Note.Bygg ditt eget smarte hjem – enkelt og raskt med Housegard Note.\nHousegard Note er et enkelt og brukervennlig system som forbedrer ditt hjems sikkerhet.\nStartpakken inneholder røykvarsler og hub. Til dette kittet kan du kople de øvrige smarte produktene som inngår i Housegard Note-familien, som f.eks. flere røykvarslere, bevegelsessensor, vannlekkasjealarm og dørsensor.\nDu kan kople sammen opp inntil 50 enheter ved hjelp av huben. Huben kopler seg opp mot internett via WiFi, 2.4 GHz. Via appen får du så notiser direkte til din mobiltelefon om noen av enhetene varsler eller trigges.\nAlle i familien kan være innloggede samtidig og du kan ha flere oppkoplede systemer i appen, som f.eks. hjemme og hytta.</string>
    <string name="modebutton_ins">Hurtigknap til scenarie</string>
    <string name="input_exist">Inputenheden kan ikke gentages</string>
    <string name="output_exist">Tilstødende outputenheder kan ikke gentages</string>
@@ -413,7 +413,7 @@
    <string name="gateway_login">Online</string>
    <string name="gateway_login_out">Offline</string>
    <string name="logouting">Afslut</string>
-   <string name="instrution">Systemspecifikation</string>
+   <string name="instrution">Manual</string>
    <string name="switch_fail">Fejl i skift</string>
    <string name="opening">Åbner</string>
    <string name="electric_city_break_off">AC slukket</string>
@@ -468,9 +468,9 @@
    <string name="success_set">Indstilling udført</string>
    <string name="alarm_remove">Alarm afbrudt</string>
    <string name="already_in_gateway">Den tilføjede enhed er allerede koblet til hub’en, angiv navnet %1$s</string>
-   <string name="gps_setting">GPS-indstillinger</string>
-   <string name="no_gps">Ingen GPS</string>
-   <string name="gps_phone">Placering af telefon</string>
+   <string name="gps_setting">Vis vejr</string>
+   <string name="no_gps">Af</string>
+   <string name="gps_phone">Til (mobil placering GPS)</string>
    <string name="re_login">Log på igen</string>
    <string name="temp_controler">Termostat</string>
    <string name="firewarm_to_update">Der er ny firmware til den aktuelle hub: %1$s, vil du opdatere?</string>
@@ -549,18 +549,18 @@
    <string name="file_is_exist">Filen eksisterer allerede</string>
    <string name="look">Se</string>
    <string name="success_download">Last suksess</string>
-   <string name="network_hz">Apparatet understøtter kun 2.4GHz Wi Fi.</string>
-   <string name="restart_gateway">Start venligst gateway og omfordel netværket</string>
-    <string name="ap_connect">AP Connect</string>
-    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 2 times per second)</string>
-   <string name="ap_title_msg">Please confirm that the gateway blue light flashes slowly (about once every 2 seconds) and then click next</string>
-    <string name="wait_connect_wifi">Connecting Wi Fi, please wait...</string>
-    <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
-    <string name="connect_device_success">Mobile phone connected to device successfully</string>
-   <string name="information_success">Successfully transferred information to device</string>
-   <string name="hand_connect_wifi">Forbind din telefon Wi Fi til ’ESP_XXX‘og retur til app</string>
-   <string name="goto_set_wifi">Opsætning af Wi Fi</string>
-   <string name="device_long_time_ap">Enheden har været i AP- distributionstilstand i lang tid. Start venligst enheden og prøv distribution igen</string>
-   <string name="current_ssid_is_not_correct">Den nuværende WiFi er ikke %1$s, sæt manuelt og vend tilbage til app</string>
+   <string name="network_hz">Hub understøtter kun 2,4 GHz WiFi.</string>
+   <string name="restart_gateway">Genstart hub og konfigurer WiFi igen</string>
+   <string name="ap_connect">Direkte tilstand</string>
+   <string name="ap_config_title">Bekræft, at hub blinker blåt (hvert sekund). Tryk på hub-knappen, og hold den nede i mere end 3 sekunder.</string>
+   <string name="ap_title_msg">Bekræft, at hub blinker langsomt blåt (hvert andet sekund), og klik derefter på Næste.</string>
+   <string name="wait_connect_wifi">Opretter forbindelse til WiFi, vent …</string>
+   <string name="not_find_wifi">\"Intet WiFi, da navnet begynder med \'ESP\' \"</string>
+   <string name="connect_device_success">Mobilen er forbundet til hub</string>
+   <string name="information_success">Oplysningerne er overført til hub</string>
+   <string name="hand_connect_wifi">Tilslut din telefons WiFi til ’ESP_XXX‘ og vend tilbage til Note-appen</string>
+   <string name="goto_set_wifi">Opret WiFi</string>
+   <string name="device_long_time_ap">Hub har været i direkte tilstand i lang tid. Genstart hub og prøv Direkte tilstand igen.</string>
+   <string name="current_ssid_is_not_correct">Den aktuelle WiFi er ikke %1$s, indstilles manuelt og vender tilbage til Note-appen</string>
    <string name="no_equipment">Intet udstyr</string>
 </resources>
