--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -2,8 +2,8 @@
 <resources>
    <string name="app_name">Housegard</string>
    <string name="btnConfirmTitle">CONNECT</string>
-   <string name="config_instruction">Vent i 5 sekunder etter at hub er slått på og trykk deretter på hub-knappen. Hold den inne i minst 5 sekunder.</string>
-   <string name="how_to_config">Påse at den blå lampen blinker, og trykk deretter på "neste punkt".</string>
+   <string name="config_instruction">Koble mobilen til 2,4 GHz Wifi. Koble til hub, vent i minst 5 sekunder. Trykk og hold navknappen i 3 sekunder.</string>
+   <string name="how_to_config">Bekreft at hub blinker blått (hvert sekund), og klikk deretter på Neste.</string>
    <string name="next">NESTE</string>
    <string name="retry">PRØV IGJEN</string>
    <string name="sure_to_logout">Er du sikker på at du vil logge av?</string>
@@ -21,14 +21,14 @@
    <string name="new_version">Ny</string>
    <string name="app_version_hint">APP-versjon</string>
    <string name="gateway_version_hint">Firmwareversjon</string>
-   <string name="connect_alert">Nåværende hub:</string>
+   <string name="connect_alert">Valgt hub</string>
    <string name="connect_equipment_alert">Velg hub</string>
    <string name="please_input_complete">Fyll inn alt</string>
    <string name="password_length">Passordet må inneholde minst 6 tegn</string>
    <string name="password_two_different">Passordene som er lagt inn, er ikke like</string>
    <string name="name_hint">E-post</string>
    <string name="password_hint">Angi passord</string>
-   <string name="wifi_password_hint">Angi wifi-passord</string>
+   <string name="wifi_password_hint">Skriv inn WiFi-passord</string>
    <string name="auto_login">Husk passord</string>
    <string name="login">Logg på</string>
    <string name="reset_code">Nullstill</string>
@@ -70,12 +70,12 @@
    <string name="update_alert">Gjeldende versjon:%1$s,Versjonskode:%2$d,Finn ny versjon:%3$s,Ny versjonskode:%4$d,Vil du oppdatere?</string>
    <string name="exit_hint">Trykk igjen for å avslutte %1$s</string>
    <string name="my_home">Mitt hjem</string>
-   <string name="system_scene">Scenarie-modus</string>
-   <string name="scene_list">Automatisering</string>
-   <string name="choose_color">Hub-farge</string>
+   <string name="system_scene">Scenario</string>
+   <string name="scene_list">Scenario</string>
+   <string name="choose_color">Fargen på hub for modusen</string>
    <string name="edit">Endre</string>
    <string name="get_max_scene_group">Du kan ikke tilføre flere enheter</string>
-   <string name="equipment_list">Enhetsliste</string>
+   <string name="equipment_list">Enheter</string>
    <string name="add_equipment">Legg til enhet</string>
    <string name="replace_equipment">Erstatt enheten</string>
    <string name="delete_equipment">Slett enheten</string>
@@ -93,7 +93,7 @@
    <string name="all_condition_hint_one">Hvis flere vilkår legges til må alle vilkår være oppfylt før handlingen utføres</string>
    <string name="all_condition_hint_two">Hvis du legger til bare ett vilkår utføres oppgaven på det tidspunktet.</string>
    <string name="all_condition_hint_three">Dersom du ikke forstår funksjonene i denne instillingen, velg standardalternativet eller kontakt oss.</string>
-   <string name="my_scene">Mitt scenario</string>
+   <string name="my_scene">Scenario</string>
    <string name="name_is_null">Navnet er tomt</string>
    <string name="name_is_repeat">Navnet er i bruk</string>
    <string name="name_is_too_long">Navnet er for langt</string>
@@ -133,11 +133,11 @@
    <string name="has_been_moved">Fjernet</string>
    <string name="has_people">Utløser</string>
    <string name="recent_device">Nåværende hub:</string>
-   <string name="net_configuration">Hub-konfigurasjon</string>
+   <string name="net_configuration">Installer hub</string>
    <string name="logout">Logg ut</string>
    <string name="setting">Innstilling</string>
    <string name="remember_password">Husk passord</string>
-   <string name="is_connected_to_wifi">%1$s er koblet til wifi</string>
+   <string name="is_connected_to_wifi">%1$s er koblet til WiFi</string>
    <string name="esptouch_is_configuring">Hub konfigureres, vent et øyeblikk...</string>
    <string name="failed">Mislyktes</string>
    <string name="failed_Esptouch_check_eq">Konfigurasjonsfeil, Kontroller wifi-signalet, at hub er i konfigurasjonsmodus eller har et problem.</string>
@@ -155,7 +155,7 @@
    <string name="dialog_empetycode">Angi valideringskoden</string>
    <string name="dialog_errorcode">Feil informasjon angitt, prøv igjen</string>
    <string name="success_send">Sending vellykket</string>
-   <string name="input_graph">Angi en grafisk valideringskode</string>
+   <string name="input_graph">Skriv inn den grafiske bekreftelseskoden</string>
    <string name="check_email">E-postregistrering utført</string>
    <string name="update_name_success">Navn oppdatert</string>
    <string name="serve_instruction">Registrering innebærer at du godkjenner gjeldende brukervilkår.</string>
@@ -163,13 +163,13 @@
    <string name="click_to_call">Klikk for å ringe</string>
    <string name="not_setting">Ikke angitt</string>
    <string name="set_emergency_call">Nødanrop</string>
-   <string name="please_input_emergency_call">Angi nødanrop</string>
+   <string name="please_input_emergency_call">Vil du skrive inn et nødanrop</string>
    <string name="emergency_desc_first">Det kan være ditt eget nummer eller en av dine pårørendes nummer.</string>
    <string name="emergency_desc_second">Klikk på knappen "Nødanrop" på enhetens detaljside.</string>
    <string name="set_username">Angi brukernavn</string>
    <string name="set_devname_success">Hubnavnet er endret</string>
-   <string name="add_device_hint">Trykk raskt 3 ganger på enhetens knapp.</string>
-   <string name="add_device_tip">ADVARSEL! Om du trykker på hubens knapp i mer en 3 sekunder når den grønne lampen blinker slettes alle enheter.</string>
+   <string name="add_device_hint">Trykk raskt på enhet knappen tre ganger for å legge til.</string>
+   <string name="add_device_tip">Advarsel! Hvis du trykker på hub-knappen i mer enn 3 sekunder, slettes alle enhetene (gjelder når huben blinker grønt)</string>
    <string name="done">Utført</string>
    <string name="now_gateway_scene_is_happen_has_scene">OBS: Den aktuelle huben %1$s %2$s er utløst.</string>
    <string name="other_gateway_scene_is_happen_has_scene">OBS: En annen hub %1$s %2$s er utløst. \n Skift visning til den</string>
@@ -198,9 +198,9 @@
    <string name="smalarm">Røykvarsler</string>
    <string name="wt">Vannlekkasje-alarm</string>
    <string name="lamp">Lampe</string>
-   <string name="valve">Controller</string>
-   <string name="thcheck">Temp og fuktmåler</string>
-   <string name="guardor">Adgangskontroll</string>
+   <string name="thcheck">Controller</string>
+   <string name="guardor">Temp og fuktmåler</string>
+   <string name="valve">Adgangskontroll</string>
    <string name="button">Knapp</string>
    <string name="curtain">Gardin</string>
    <string name="cxsmalarm">Røykvarsler</string>
@@ -291,7 +291,7 @@
    <string name="device_setup_record_length">Lengde på opptak</string>
    <string name="device_setup_record_mode">Opptaksmodus</string>
    <string name="device_setup_exposure_time">Eksponeringstid</string>
-   <string name="device_setup_scene_mode">Scenemodus</string>
+   <string name="device_setup_scene_mode">Modus</string>
    <string name="device_setup_electronic_slow_shutter">Elektronisk langsom blender</string>
    <string name="device_setup_electronic_slow_shutter_prompt">Forbedrer bildets lysstyrke ved dårlig lysforhold. Kan gi uskarpe bilder.</string>
    <string name="device_setup_color_mode">Fargemodus</string>
@@ -344,10 +344,10 @@
    <string name="no_monitor_hint">Ingen kamera, klikk for å legge til</string>
    <string name="monitor_manage">Kamerahåndtering</string>
    <string name="confirm_delete_monitor">Er du sikker på at du vil slette kameraet?</string>
-   <string name="please_choose_mode">Velg en profil</string>
-   <string name="timer_list">Timer</string>
-   <string name="please_choose_switch_time">Velg omkoblingstid</string>
-   <string name="edit_timer">Endre tidspunkt</string>
+   <string name="please_choose_mode">Velg modus</string>
+   <string name="timer_list">Endre modus</string>
+   <string name="please_choose_switch_time">Velg tid for å endre modus</string>
+   <string name="edit_timer">Endre modus</string>
    <string name="switch_to">Bytt til</string>
    <string name="most_timer">Ingen flere tidsbestemte oppgaver kan legges til</string>
    <string name="wifi_config">Legg til nytt kamera</string>
@@ -383,8 +383,8 @@
    <string name="common_setting">Grunninnstillinger</string>
    <string name="select_date">Velg dato</string>
    <string name="gateway_empty">Hublisten er tom</string>
-   <string name="equipment_list_empty">Enhetsliste er tom\nVennligst trykk på legg til-tasten øverst til høyre for å legge til</string>
-   <string name="timer_list_empty">Timerliste er tom\nTrykk på legg til-tasten øverst til høyre for å legge til</string>
+   <string name="equipment_list_empty">Enhetsliste er tom\n klikk på plusstegnet for å legge til.</string>
+   <string name="timer_list_empty">Timerliste er tom\n Klikk på plusstegnet for å legge til.</string>
    <string name="video_common">Normal</string>
    <string name="video_alarm">Alarm</string>
    <string name="video_time">Tid</string>
@@ -397,7 +397,7 @@
    <string name="temp_or_hum">Velg temperatur eller luftfuktighetsnivå</string>
    <string name="trigger_style">Utløser-tilstand</string>
    <string name="server_intro">1, Bekreftelsen og aksept av servicevilkårene\nInnholdet i denne nettsiden og APP eies av Sunmatic The Safety Company AB. Brukere må lese nøye vilkårene og betingelsene før de aksepterer denne tjenesten. Brukere av tjenesten eller personer som har fullført registreringsprosessen, aksepterer alle tjenestevilkårene\n2, Brukeren samtykker til å:\n(1) gi detaljert og presis personlig informasjon.\n(2) kontinuerlig oppdatere registreringsinformasjonen og oppfylle kravene.\nHvis informasjonen gitt av brukere er unøyaktig, har denne nettsiden rett til å avslutte tjenesten.\nDenne nettsiden og APP gir ikke videre brukerens navn, adresse, e-postadresse, kontonummer og telefonnummer og annen informasjon (se klausulen om personvern).\nBrukere av denne siden og all APP-atferd må følge:\n(1) Overføring av data må samsvare med EU-forskrifter.\n(2) Bruken av informasjonstjenester er ikke ulovlige eller umoralske handlinger.\n(3) Ikke påvirk nettverkstjenestene.\n(4) Følg alle nettverksprotokoller, regler, prosedyrer og praksis for bruken av tjenester. Brukeratferdskoden er basert på Internett-forskriftene, retningslinjer, prosedyrer og praksis.\n3, Endre tjenestevilkårene\nDenne nettsiden og APP har rett til å endre vilkårene om nødvendig som vil bli publisert på siden.\nHvis du ikke aksepterer endringene, kan brukeren ta initiativet til å kansellere medlemskapet. Hvis du ikke avbryter medlemskapet, samtykker du til hver endring i tjenestevilkårene.\n4, Brukerens kontonummer, passord og sikkerhet\nNår du er registrert som medlem, får du passord og brukernavn.</string>
-   <string name="about_app">Housegard Note smart-home system består av en hub og ulike sensorer. Huben kopbes til webserveren via ditt wifi, og du kan styre og overvåke hjemmet via telefonapp. Ved å skape forskjellige scenarier kan du sette opp systemet til å utføre handlinger automatisk avhengig av hva som skjer. Tilgjengelige enheter er røykvarslere, karbonmonoksidvarsler og temperaturalarm. Enheter som kommer er vannlekkasjealarm, dør/vindus-alarm, bevegelsessensorer, strømbrytere, temp- og luftfuktighetsmålere, webkamera etc. osv. Listen med enheter i Housegard Note, oppdateres kontinuerlig.</string>
+   <string name="about_app">Beskytt hjemmet på avstand med smarte produkter fra Housegard Note.\nBygg ditt eget smarte hjem – enkelt og raskt med Housegard Note.\nHousegard Note er et enkelt og brukervennlig system som forbedrer ditt hjems sikkerhet.\nStartpakken inneholder røykvarsler og hub. Til dette kittet kan du kople de øvrige smarte produktene som inngår i Housegard Note-familien, som f.eks. flere røykvarslere,bevegelsessensor, vannlekkasjealarm og dørsensor.\nDu kan kople sammen opp inntil 50 enheter ved hjelp av huben. Huben kopler seg opp mot internett via WiFi, 2.4 GHz. Via appen får du så notiser direkte til din mobiltele fon</string>
    <string name="modebutton_ins">Hurtigknapp til scenario</string>
    <string name="input_exist">Inngangsenhet kan ikke gjentas</string>
    <string name="output_exist">Tilstøtende utgangsenheter kan ikke gjentas</string>
@@ -413,7 +413,7 @@
    <string name="gateway_login">Logg inn</string>
    <string name="gateway_login_out">Logg ut</string>
    <string name="logouting">Avslutter</string>
-   <string name="instrution">Systemspesifikasjon</string>
+   <string name="instrution">Håndbok</string>
    <string name="switch_fail">Bryterfeil</string>
    <string name="opening">Åpner</string>
    <string name="electric_city_break_off">AC av</string>
@@ -468,9 +468,9 @@
    <string name="success_set">Innstillingen vellykket</string>
    <string name="alarm_remove">Avbryt alarm</string>
    <string name="already_in_gateway">Denne enheten er allerede tilkoblet til hub. Angi %1$n-navn</string>
-   <string name="gps_setting">GPS Innstilling</string>
-   <string name="no_gps">Ingen GPS</string>
-   <string name="gps_phone">Plassering  telefon</string>
+   <string name="gps_setting">Vis vær</string>
+   <string name="no_gps">Av</string>
+   <string name="gps_phone">På (mobil GPS)</string>
    <string name="re_login">Log inn igjen</string>
    <string name="temp_controler">Termostat</string>
    <string name="firewarm_to_update">Gjeldende hub har ny firmware:%1$s,Vil du oppdatere?</string>
@@ -549,18 +549,18 @@
    <string name="file_is_exist">Filen finnes allerede</string>
    <string name="look">utsikt</string>
    <string name="success_download">Nerladdning lyckades</string>
-   <string name="network_hz">Il dispositivo supporta solo 2.4GHz Wi Fi</string>
-   <string name="restart_gateway">Vennligst starte porten igjen og redistriburer nettverket</string>
-    <string name="ap_connect">AP Connect</string>
-    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 2 times per second)</string>
-   <string name="ap_title_msg">Please confirm that the gateway blue light flashes slowly (about once every 2 seconds) and then click next</string>
-    <string name="wait_connect_wifi">Connecting Wi Fi, please wait…</string>
-    <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
-    <string name="connect_device_success">Mobile phone connected to device successfully</string>
-   <string name="information_success">Successfully transferred information to device</string>
-   <string name="hand_connect_wifi">Kontakt telefonen Wi Fi til ESP.Xxx’ og vender tilbake til app</string>
-   <string name="goto_set_wifi">Sett opp Wi Fi</string>
-   <string name="device_long_time_ap">Innretningen har vært i AP-distribusjonsmodus i lang tid</string>
-   <string name="current_ssid_is_not_correct">Nåværende WiFi er ikke %1$s, vennligst sett manuelt og vend tilbake til app</string>
-   <string name="no_equipment">No equipment</string>
+   <string name="network_hz">Hub støtter bare 2,4 GHz WiFi.</string>
+   <string name="restart_gateway">Start huben på nytt og konfigurer WiFi på nytt</string>
+   <string name="ap_connect">Direkte modus</string>
+   <string name="ap_config_title">Bekreft at hub blinker blått (hvert sekund). Trykk og hold hubknappen i mer enn 3 sekunder.</string>
+   <string name="ap_title_msg">Bekreft at hub blinker sakte blått (hvert annet sekund), og klikk deretter på Neste.</string>
+   <string name="wait_connect_wifi">Koble til WiFi, vent ...</string>
+   <string name="not_find_wifi">\"Ingen WiFi som navnet begynner med \'ESP\' \"</string>
+   <string name="connect_device_success">Mobiltelefon koblet til huben</string>
+   <string name="information_success">Informasjonen er overført til huben</string>
+   <string name="hand_connect_wifi">Koble mobiltelefons WiFi til ’ESP_XXX’ og gå tilbake til Note-appen</string>
+   <string name="goto_set_wifi">Sett opp WiFi</string>
+   <string name="device_long_time_ap">Huben har vært i direkte modus i lang tid. Start huben på nytt og prøv Direkte modus igjen.</string>
+   <string name="current_ssid_is_not_correct">Nåværende WiFi er ikke %1$s, sett manuelt og gå tilbake til Notat-appen.</string>
+   <string name="no_equipment">Ingen utstyr</string>
 </resources>
