--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -2,8 +2,8 @@
 <resources>
    <string name="app_name">Housegard</string>
    <string name="btnConfirmTitle">ANSLUT</string>
-   <string name="config_instruction">När hubben är påslagen i fem sekunder, tryck och håll in hubb-knappen i mer än tre sekunder.</string>
-   <string name="how_to_config">Bekräfta att det blåa ljuset blinkar och klicka sedan på Nästa.</string>
+   <string name="config_instruction">Anslut mobilen till ditt 2.4 GHz Wifi. Anslut hubb, vänta i minst 5 sekunder. Tryck och håll in hubb-knappen i  3 sekunder.</string>
+   <string name="how_to_config">Bekräfta att hubben blinkar blått (varje sekund) och klicka sedan på Nästa.</string>
    <string name="next">NÄSTA</string>
    <string name="retry">FÖRSÖK IGEN</string>
    <string name="sure_to_logout">Är du säker på att du vill logga ut?</string>
@@ -21,14 +21,14 @@
    <string name="new_version">Ny</string>
    <string name="app_version_hint">App-version</string>
    <string name="gateway_version_hint">Firmwareversion</string>
-   <string name="connect_alert">Nuvarande hubb:</string>
+   <string name="connect_alert">Vald hubb</string>
    <string name="connect_equipment_alert">Välj en hubb</string>
    <string name="please_input_complete">Fyll i hela!</string>
    <string name="password_length">Lösenordet måste innehålla minst 6 tecken</string>
    <string name="password_two_different">Lösenord matchar inte</string>
    <string name="name_hint">Mejl</string>
    <string name="password_hint">Ange lösenord</string>
-   <string name="wifi_password_hint">Ange wifi-lösenord</string>
+   <string name="wifi_password_hint">Ange WiFi-lösenord</string>
    <string name="auto_login">Kom ihåg lösenordet</string>
    <string name="login">Logga in</string>
    <string name="reset_code">Återställ lösenord</string>
@@ -70,12 +70,12 @@
    <string name="update_alert">Aktuell version:% 1$s, versionsnummer:%2$d, hittade ny version:%3$s, nytt versionsnummer:%4$d, Vill du uppdatera?</string>
    <string name="exit_hint">Tryck igen för att avsluta %1$s</string>
    <string name="my_home">Mitt hem</string>
-   <string name="system_scene">Scenarioläge</string>
-   <string name="scene_list">Automation</string>
-   <string name="choose_color">Hubb färg</string>
+   <string name="system_scene">Scenario</string>
+   <string name="scene_list">Scenario</string>
+   <string name="choose_color">Färg på hubben för läget</string>
    <string name="edit">Ändra</string>
    <string name="get_max_scene_group">Du kan inte lägga till fler</string>
-   <string name="equipment_list">Enhetslista</string>
+   <string name="equipment_list">Enheter</string>
    <string name="add_equipment">Lägg till enhet</string>
    <string name="replace_equipment">Ersätt enheten</string>
    <string name="delete_equipment">Ta bort enheten</string>
@@ -93,7 +93,7 @@
    <string name="all_condition_hint_one">Om flera villkor läggs till måste alla villkor vara uppfyllda innan uppgiften utförs.</string>
    <string name="all_condition_hint_two">Om bara ett villkor läggs till utförs uppgiften vid denna</string>
    <string name="all_condition_hint_three">Om du fortfarande inte förstår funktionerna i det här alternativet, välj standardalternativet eller fråga oss.</string>
-   <string name="my_scene">Mitt scenario</string>
+   <string name="my_scene">Scenario</string>
    <string name="name_is_null">Namnet är tomt</string>
    <string name="name_is_repeat">Namnet används redan</string>
    <string name="name_is_too_long">Namnet är för långt</string>
@@ -133,11 +133,11 @@
    <string name="has_been_moved">Avlägsnades</string>
    <string name="has_people">Trigger</string>
    <string name="recent_device">Nuvarande hubb:</string>
-   <string name="net_configuration">Hubb-konfiguration</string>
+   <string name="net_configuration">Installera hubb</string>
    <string name="logout">Logga ut</string>
    <string name="setting">Inställningar</string>
    <string name="remember_password">Kom ihåg lösenordet</string>
-   <string name="is_connected_to_wifi">%1$s är ansluten till wifi</string>
+   <string name="is_connected_to_wifi">%1$s är ansluten till WiFi</string>
    <string name="esptouch_is_configuring">Hubben konfigureras, vänta…</string>
    <string name="failed">Fel</string>
    <string name="failed_Esptouch_check_eq">Konfigurationsfel. Kontrollera wifi-signalen, hubb är i konfigurationsläge eller har problem.</string>
@@ -155,7 +155,7 @@
    <string name="dialog_empetycode">Ange verifieringskoden</string>
    <string name="dialog_errorcode">Inmatningsfel, skriv in igen</string>
    <string name="success_send">Skickning klar</string>
-   <string name="input_graph">Ange en grafisk verifieringskod</string>
+   <string name="input_graph">Ange den grafiska verifieringskoden</string>
    <string name="check_email">Mejlregistrering klar</string>
    <string name="update_name_success">Ändrat namn klar</string>
    <string name="serve_instruction">Registrering innebär att du godkänner användarvillkoren</string>
@@ -163,13 +163,13 @@
    <string name="click_to_call">Klicka för att ringa nödnumret</string>
    <string name="not_setting">Inte inställd</string>
    <string name="set_emergency_call">Ange nödnummer</string>
-   <string name="please_input_emergency_call">Ange ett nödnummer</string>
+   <string name="please_input_emergency_call">Vill du ange ett nödnummer?</string>
    <string name="emergency_desc_first">Det här kan vara ditt mobilnummer eller någon du är nära.</string>
    <string name="emergency_desc_second">Klicka på knappen "Nödsamtal" på enhetens detaljsida.</string>
    <string name="set_username">Ändra användarnamn</string>
    <string name="set_devname_success">Ändrat hubbnamnet klart</string>
-   <string name="add_device_hint">Tryck på knappen för att enheten ska läggas till tre gånger snabbt.</string>
-   <string name="add_device_tip">Obs! När grönt grönt ljus blinkar, tryck länge på hubb-knappen i mer än 3 sekunder raderar alla enheter.</string>
+   <string name="add_device_hint">Tryck tre gånger snabbt på enhetens knapp för att lägga till.</string>
+   <string name="add_device_tip">Varning! Om du trycker på hubb-knappen i mer än 3 sekunder raderas alla enheter (gäller när hubben blinkar grönt)</string>
    <string name="done">Klar</string>
    <string name="now_gateway_scene_is_happen_has_scene">Obs! Den aktuella hubben %1$s %2$s är triggad</string>
    <string name="other_gateway_scene_is_happen_has_scene">Obs! Annan hubb %1$s %2$s är triggad, \n byt visning till den</string>
@@ -291,7 +291,7 @@
    <string name="device_setup_record_length">Videolängd</string>
    <string name="device_setup_record_mode">Videoläge</string>
    <string name="device_setup_exposure_time">Exponeringstid</string>
-   <string name="device_setup_scene_mode">Scenarioläge</string>
+   <string name="device_setup_scene_mode">Läge</string>
    <string name="device_setup_electronic_slow_shutter">Långsam elektronisk slutare</string>
    <string name="device_setup_electronic_slow_shutter_prompt">Förbättra bildens ljusstyrka vid svagt ljus. Kan orsaka oskärpa.</string>
    <string name="device_setup_color_mode">Färgläge</string>
@@ -344,10 +344,10 @@
    <string name="no_monitor_hint">Ingen video, klicka för att lägga till</string>
    <string name="monitor_manage">Kamerahantering</string>
    <string name="confirm_delete_monitor">Är du säker på att ta bort kameran?</string>
-   <string name="please_choose_mode">Välj en profil</string>
-   <string name="timer_list">Timer</string>
-   <string name="please_choose_switch_time">Välj omkopplingstiden</string>
-   <string name="edit_timer">Ändra tidpunkten</string>
+   <string name="please_choose_mode">Välj läge</string>
+   <string name="timer_list">Ändra läge</string>
+   <string name="please_choose_switch_time">Välj tid för byte av läge</string>
+   <string name="edit_timer">Ändra läge</string>
    <string name="switch_to">Byt till</string>
    <string name="most_timer">Inga fler tidsbestämda uppgifter kan läggas till</string>
    <string name="wifi_config">Lägg till kamera</string>
@@ -383,8 +383,8 @@
    <string name="common_setting">Grundinställningar</string>
    <string name="select_date">Välj datum</string>
    <string name="gateway_empty">Hubblistan är tom</string>
-   <string name="equipment_list_empty">Enhetslistan är tom \n, tryck på övre högra hörnet för att lägga till</string>
-   <string name="timer_list_empty">Timerlistan är tom \n, tryck på den övre högra knappen för att lägga till</string>
+   <string name="equipment_list_empty">Enhetslistan är tom,\n klicka på plus-tecknet för att lägga till.</string>
+   <string name="timer_list_empty">Timerlistan är tom \n. Klicka på plus-tecknet för att lägga till.</string>
    <string name="video_common">Normal</string>
    <string name="video_alarm">Larm</string>
    <string name="video_time">Inspelningstid</string>
@@ -397,7 +397,7 @@
    <string name="temp_or_hum">Välj temperatur eller luftfuktighetstrigger</string>
    <string name="trigger_style">Trigger-läge</string>
    <string name="server_intro">1. Bekräftelse och godkännande av användarvillkor \n Ägandet av innehållet och tjänsterna på denna webbplats och app ägs av Sunmatic The Safety Company AB. Läs dessa villkor noggrant innan du accepterar den här tjänsten. Användaren accepterar tjänsten, eller genom att slutföra registreringsprocessen accepterar användaren alla användarvillkor. \n \n2, Användaren godkänner: \n(1) Ge aktuell, detaljerad och noggrann personlig information. \n(2)Uppdatera registreringsinformationen kontinuerligt, och möt kraven. \n Om informationen som lämnats av användaren inte är korrekt, har den här webbplatsen rätt att säga upp tjänsten. \n Denna webbplats och app kommer inte att avslöja användarens namn, adress, e-postadress, kontonummer och telefonnummer (läs sekretesspolicyen). \n Användare måste följa alla åtgärder på denna webbplats och app: \n(1) Informationen ska överensstämma med relevanta EU-bestämmelser. \n(2) Användning av informationstjänster är inte olaglig och oetisk. \n(3) Stör inte dessa nättjänster. \n(4)Överensstämma med alla nätverksprotokoll, regler, förfaranden och rutiner som använder tjänsten. Användarens uppförandekod bygger på Internetregler, policyer, rutiner. \n \n3, Ändring av användarvillkor \n Den här webbplatsen och APP har rätt att ändra villkoren om det behövs och lägger dem på sidan. \n Om du inte accepterar ändringarna kan användaren frivilligt avbryta sitt medlemskap. Om du inte avbryter ditt medlemskap anses du ha accepterat ändringarna i användarvillkoren. \n \n4, Användarens konto, lösenord och säkerhet \n När du väl har registrerat dig som medlem kommer du att ha ett lösenord och användarnamn.</string>
-   <string name="about_app">Housegard Notes intelligenta säkerhetssystem består av en hubb och olika enheter. Cloud-servern, mobil internet och RF-kommunikationsteknik används som bärare av datalänken för att uppnå fjärrövervakning och kontroll av den fjärranslutna intelligenta terminalen till hemmiljö. Systemet stöder flera typer. Profiler och flexibla anpassade regler för handhavande av scenarier som automatiserar olika säkerhetshändelser. Intelligenta enheter har för närvarande röklarm, gaslarm, kolmonoxidlarm, vattenläckagelarm, magnetiska detektorer för dörrar, rörelsesdetektorer, nödsamtalsknappar, smarta uttag och temperatur- och fuktighetsdetektorer. Det kommer att finnas mer enheter som nätverkskameror, smarta lås, paneler, smart luftrening och elektromagnetiska vattenventiler.</string>
+   <string name="about_app">Skydda hemmet på distans med smarta produkter från Housegard Note.\nBygg ditt eget smarta hem – enkelt och snabbt med Housegard Note.\nHousegard Note är ett enkelt och användarvänligt system som förbättrar ditt hems säkerhet.\nStartpaketet innehåller brandvarnare och hubb. Till dettta kit kan du ansluta övriga smarta produkter som ingår i Housegard Note-familjen, som tex fler brandvarnare, rörelsedetektor, vattenläckagelarm och dörrsensor.\nDu kan koppla samman upp till 50 enheter med hjälp av hubben som kopplar upp sig mot internet via WiFi, 2.4 GHz. Via appen får du sedan notiser direkt till din mobil om någon av enheterna larmar eller triggas.\nAlla i familjen kan vara inloggade samtidigt och du kan ha flera uppkopplade system i appen, som t.ex. hemmet och sommarstugan.</string>
    <string name="modebutton_ins">Snabbknapp för scenario</string>
    <string name="input_exist">Ingångsenheten kan inte upprepas</string>
    <string name="output_exist">Angränsande utgångenheter kan inte upprepas</string>
@@ -413,7 +413,7 @@
    <string name="gateway_login">Online</string>
    <string name="gateway_login_out">Offline</string>
    <string name="logouting">Avsluta</string>
-   <string name="instrution">Systemspecifikation</string>
+   <string name="instrution">Manual</string>
    <string name="switch_fail">Fel på byte</string>
    <string name="opening">Öppning</string>
    <string name="electric_city_break_off">AC Av</string>
@@ -468,9 +468,9 @@
    <string name="success_set">Inställning klar</string>
    <string name="alarm_remove">Larm avbryt</string>
    <string name="already_in_gateway">Den tillagda enheten är redan kopplad med hubb, ange namnet %1$s</string>
-   <string name="gps_setting">GPS inställningar</string>
-   <string name="no_gps">Ingen GPS</string>
-   <string name="gps_phone">Placering av telefon</string>
+   <string name="gps_setting">Visa väder</string>
+   <string name="no_gps">Av</string>
+   <string name="gps_phone">På (mobilens plats GPS)</string>
    <string name="re_login">Logga in igen</string>
    <string name="temp_controler">Termostat</string>
    <string name="firewarm_to_update">Den aktuella hubben har ny firmware: %1$s, vill du uppdatera?</string>
@@ -549,18 +549,18 @@
    <string name="file_is_exist">Filen finns redan</string>
    <string name="look">Se</string>
    <string name="success_download">Nerladdning lyckades</string>
-   <string name="network_hz">Apparaten stöder bara 2.4GHz Wi Fi.</string>
-   <string name="restart_gateway">Starta om porten och omfördela nätverket</string>
-    <string name="ap_connect">AP Connect</string>
-    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 2 times per second)</string>
-   <string name="ap_title_msg">Please confirm that the gateway blue light flashes slowly (about once every 2 seconds) and then click next</string>
-   <string name="wait_connect_wifi">Connecting Wi Fi, please wait…</string>
-    <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
-    <string name="connect_device_success">Mobile phone connected to device successfully</string>
-   <string name="information_success">Successfully transferred information to device</string>
-   <string name="hand_connect_wifi">Koppla ditt Wi-Fi till ’ESP_XXX‘ och återgå till app</string>
-   <string name="goto_set_wifi">Upprätta Wi Fi</string>
-   <string name="device_long_time_ap">Enheten har varit i AP distributionsläge under lång tid. Starta om enheten och prova distributionen igen.</string>
-   <string name="current_ssid_is_not_correct">Den nuvarande WiFi är inte %1$s, ställ in manuellt och återgå till app</string>
+   <string name="network_hz">Hubben stödjer endast 2.4GHz WiFi.</string>
+   <string name="restart_gateway">Starta om hubben och konfigurera om WiFi</string>
+   <string name="ap_connect">Direktläge</string>
+   <string name="ap_config_title">Bekräfta att hubben blinkar blått (varje sekund). Tryck och håll in hubb-knappen i mer än 3 sekunder.</string>
+   <string name="ap_title_msg">Bekräfta att hubben blinkar blått långsamt (varannan sekund) och klicka sedan på Nästa.</string>
+   <string name="wait_connect_wifi">Ansluter till WiFi, vänta...</string>
+   <string name="not_find_wifi">\"Ingen WiFi som namnet börjar på \'ESP\' \"</string>
+   <string name="connect_device_success">Mobilen anslöt till hubben</string>
+   <string name="information_success">Informationen har överförts till hubben</string>
+   <string name="hand_connect_wifi">Koppla mobilens WiFi till ’ESP_XXX‘ och återgå till Note appen</string>
+   <string name="goto_set_wifi">Upprätta WiFi</string>
+   <string name="device_long_time_ap">Hubben har varit i Direktläge under lång tid. Starta om hubben och prova Direktläge igen.</string>
+   <string name="current_ssid_is_not_correct">Den nuvarande WiFi är inte %1$s, ställ in manuellt och återgå till Note appen</string>
    <string name="no_equipment">Ingen utrustning</string>
 </resources>
